--- a/src/components/Guests/Guests.module.scss
+++ b/src/components/Guests/Guests.module.scss
@@ -1,29 +1,33 @@
 .wrapper {
   width: 50%;
   margin: 0 auto;
+  @media screen and (max-width: 650px) {
+    width: 100%;
+  }
   h1 {
     text-align: center;
   }
 }
 
 table {
-    border-collapse: collapse;
-    width: 100%;
-    background-color: #fff;
-    box-shadow: 0 0 10px rgba(0,0,0,0.1);
-  }
+  border-collapse: collapse;
+  width: 100%;
+  background-color: #fff;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+}
 
-  th, td {
-    padding: 12px 16px;
-    text-align: left;
-    border-bottom: 1px solid #e0e0e0;
-  }
+th,
+td {
+  padding: 12px 16px;
+  text-align: left;
+  border-bottom: 1px solid #e0e0e0;
+}
 
-  thead {
-    background-color: #4CAF50;
-    color: white;
-  }
+thead {
+  background-color: #4caf50;
+  color: white;
+}
 
-  tr:hover {
-    background-color: #f1f1f1;
-  }
+tr:hover {
+  background-color: #f1f1f1;
+}
