--- a/src/components/Guests/Guests.module.scss
+++ b/src/components/Guests/Guests.module.scss
@@ -1,11 +1,13 @@
 .wrapper {
   width: 50%;
   margin: 0 auto;
-  @media screen and (max-width: 650px) {
+  overflow-x: auto;
+  @media screen and (max-width: 850px) {
     width: 100%;
   }
   h1 {
     text-align: center;
+    font-size: 2rem;
   }
 }
 
@@ -28,6 +30,27 @@ thead {
   color: white;
 }
 
-tr:hover {
+
+tbody tr:hover {
   background-color: #f1f1f1;
+}
+
+.numberOfGuests {
+  font-size: 1.2rem;
+}
+
+.formElementSelect {
+  display: flex;
+  justify-content: flex-start;
+  flex-direction: row;
+  margin-bottom: 0.5rem;
+  align-items: center;
+  label {
+    font-size: 1.2rem;
+    width: fit-content;
+  }
+  select {
+    margin-left: 1rem;
+    font-size: 1.2rem;
+  }
 }
