--- a/src/components/Home/Home.module.scss
+++ b/src/components/Home/Home.module.scss
@@ -1,187 +1,194 @@
 .main {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    overflow: hidden;
-    flex-direction: column;
-    width: 100%;
-  }
-  
-  .place {
-    padding: 3rem 2.5rem;
-    background-color: #fcf9f7;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-    width: 100%;
-    h2 {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  overflow: hidden;
+  flex-direction: column;
+  width: 100%;
+}
+
+.place {
+  padding: 3rem 2.5rem;
+  background-color: #fcf9f7;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  width: 100%;
+  h2 {
+    color: #938581;
+    font-size: 3rem;
+    margin-bottom: 1rem;
+    text-align: center;
+    svg {
       color: #938581;
-      font-size: 3rem;
-      margin-bottom: 1rem;
-      text-align: center;
-      svg {
-        color: #938581;
-      }
-    }
-  
-    iframe {
-      width: 55%;
-      @media screen and (max-width: 650px) {
-        width: 100%;
-      }
     }
   }
-  .placeImages {
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    justify-content: center;
-    align-items: center;
-    width: 60%;
+
+  iframe {
+    width: 55%;
     @media screen and (max-width: 650px) {
       width: 100%;
     }
-    img {
-      display: inline-block;
-      margin: 1rem;
-      width: 85%;
-      height: auto;
-    }
   }
-  .placeDescription {
+}
+.placeImages {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+  width: 60%;
+  @media screen and (max-width: 650px) {
+    width: 100%;
+  }
+  img {
+    display: inline-block;
+    margin: 1rem;
+    width: 85%;
+    height: auto;
+  }
+}
+.placeDescription {
+  width: 45%;
+  font-size: 1.4rem;
+  padding: 1rem;
+  text-align: center;
+  color: #914223;
+
+  span {
+    font-size: 2rem;
+    font-style: italic;
+    font-weight: 400;
+    color: #682f18;
+  }
+
+  @media screen and (max-width: 650px) {
+    width: 100%;
+  }
+}
+.program {
+  padding: 3rem 2.5rem;
+  background-color: #fcf9f7;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  width: 100%;
+  h2 {
+    color: #938581;
+    font-size: 3rem;
+    text-align: center;
+  }
+  P {
     width: 45%;
-    font-size: 1.4rem;
+    font-size: 1.6rem;
     padding: 1rem;
     text-align: center;
     color: #914223;
-  
     span {
-      font-size: 2rem;
-      font-style: italic;
-      font-weight: 400;
-      color: #682f18;
+      font-size: 2.5rem;
     }
-  
     @media screen and (max-width: 650px) {
       width: 100%;
     }
   }
-  .program {
-    padding: 3rem 2.5rem;
-    background-color: #fcf9f7;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-    width: 100%;
-    h2 {
-      color: #938581;
-      font-size: 3rem;
-      text-align: center;
-    }
-    P {
-      width: 45%;
-      font-size: 1.6rem;
-      padding: 1rem;
-      text-align: center;
-      color: #914223;
-      span {
-        font-size: 2.5rem;
-      }
-      @media screen and (max-width: 650px) {
-        width: 100%;
-      }
-    }
-  
-    article {
-      ul {
-        list-style: none;
-        li {
-          span {
-            font-size: 1.8rem;
-            color: #875135;
-          }
-          font-size: 1.6rem;
-          margin-bottom: 0.5rem;
-          font-style: italic;
-          font-weight: 400;
+
+  article {
+    ul {
+      list-style: none;
+      li {
+        span {
+          font-size: 1.8rem;
+          color: #875135;
         }
+        font-size: 1.6rem;
+        margin-bottom: 0.5rem;
+        font-style: italic;
+        font-weight: 400;
       }
     }
   }
-  .details {
-    padding: 3rem 2.5rem;
-    background-color: #fcf9f7;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-    width: 100%;
-    h2 {
-      color: #938581;
-      font-size: 3rem;
-      text-align: center;
-      margin-bottom: 1rem;
-    }
-  
-    article {
-      width: 50%;
-      @media screen and (max-width: 650px) {
-        width: 100%;
-      }
-      ul {
-        list-style: decimal;
-        li {
-          text-indent: 2rem;
-          list-style-position: inside;
-          font-size: 1.6rem;
-          margin-bottom: 0.5rem;
-          font-weight: 400;
-          text-align: justify;
-          @media screen and (max-width: 650px) {
-            font-size: 1.5rem;
-          }
-        }
-      }
-    }
-    h3 {
-      color: #938581;
-      font-size: 2rem;
-      margin-top: 2rem;
-      text-align: center;
+}
+.details {
+  padding: 3rem 2.5rem;
+  background-color: #fcf9f7;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  width: 100%;
+  h2 {
+    color: #938581;
+    font-size: 3rem;
+    text-align: center;
+    margin-bottom: 1rem;
+  }
+
+  article {
+    width: 50%;
+    @media screen and (max-width: 650px) {
       width: 100%;
     }
-    div {
-      display: flex;
-      flex-direction: row;
-      justify-content: center;
-      gap: 1rem;
-      margin-top: 1rem;
-      span {
-        display: inline-block;
-        border-radius: 100%;
-        width: 50px;
-        content: "";
-        height: 50px;
-        border: 1px solid white;
+    ul {
+      list-style: decimal;
+      li {
+        text-indent: 2rem;
+        list-style-position: inside;
+        font-size: 1.6rem;
+        margin-bottom: 0.5rem;
+        font-weight: 400;
+        text-align: justify;
+        @media screen and (max-width: 650px) {
+          font-size: 1.5rem;
+        }
       }
     }
   }
-  
-  .palette1 {
-    background-color: #062017;
+  h3 {
+    color: #938581;
+    font-size: 2rem;
+    margin-top: 2rem;
+    text-align: center;
+    width: 100%;
   }
-  .palette2 {
-    background-color: #0a3428;
+}
+.colorPallete {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  gap: 1rem;
+  margin-top: 1rem;
+  span {
+    display: inline-block;
+    border-radius: 100%;
+    width: 50px;
+    content: "";
+    height: 50px;
+    border: 1px solid white;
   }
-  .palette3 {
-    background-color: #515b41;
+}
+.palette1 {
+  background-color: #062017;
+}
+.palette2 {
+  background-color: #0a3428;
+}
+.palette3 {
+  background-color: #515b41;
+}
+.palette4 {
+  background-color: #875135;
+}
+.palette5 {
+  background-color: #dcab8d;
+}
+
+.footer {
+  h3:nth-of-type(2) {
+    text-align: center;
+    margin-bottom: 2rem;
+    margin-top: 1rem;
+    font-size: 1.4rem;
   }
-  .palette4 {
-    background-color: #875135;
-  }
-  .palette5 {
-    background-color: #dcab8d;
-  }
-  
+}
