--- a/src/components/Home/Home.module.scss
+++ b/src/components/Home/Home.module.scss
@@ -185,8 +185,10 @@
 }
 
 .footer {
-  h3:nth-of-type(2) {
+  h3 {
     text-align: center;
+  }
+  h3:nth-of-type(2) {
     margin-bottom: 2rem;
     margin-top: 1rem;
     font-size: 1.4rem;
