--- a/src/components/Attendance/Attendance.module.scss
+++ b/src/components/Attendance/Attendance.module.scss
@@ -68,6 +68,7 @@
   }
   select {
     margin-left: 1rem;
+    position: relative;
     @media screen and (max-width: 650px) {
       width: 50px;
       height: 30px;
